Set up Patroni on charm

--- a/actions.yaml
+++ b/actions.yaml
@@ -1,5 +1,7 @@
 # Copyright 2021 Canonical Ltd.
 # See LICENSE file for licensing details.
 
+get-primary:
+  description: Get the unit with is the primary/leader in the replication.
 get-postgres-password:
   description: Get the initial postgres user password for the database.
