--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ passenv =
   HOME
   CHARM_BUILD_DIR
   MODEL_SETTINGS
+  PYTEST_SKIP_DEPLOY
 
 [testenv:fmt]
 description = Apply coding style standards to code
