some fixes for flakiness
At this point I'm going to submit what I have and keep my PR blocked until https://github.com/canonical/pebble/issues/6 is fixed

--- a/tox.ini
+++ b/tox.ini
@@ -73,4 +73,4 @@ deps =
     psycopg2-binary
     -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0
