DPE-91 consumer relation + library

--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -8,4 +8,5 @@ bases:
       channel: "20.04"
 parts:
   charm:
+    charm-binary-python-packages: [psycopg2-binary==2.9.3]
     charm-python-packages: [setuptools]
