--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@ envlist = lint, unit
 [vars]
 src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
-;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
-all_path = {[vars]src_path} {[vars]tst_path}
+lib_path = {toxinidir}/lib/charms/postgresql
+all_path = {[vars]src_path} {[vars]tst_path} {[vars]lib_path}
 
 [testenv]
 setenv =
@@ -58,17 +58,21 @@ description = Run unit tests
 deps =
     pytest
     coverage[toml]
+    psycopg2-binary
     -r{toxinidir}/requirements.txt
 commands =
-    coverage run --source={[vars]src_path} \
+    coverage run --source={[vars]src_path},{[vars]lib_path} \
         -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
     coverage report
 
 [testenv:integration]
 description = Run integration tests
 deps =
+;    https://github.com/marceloneppel/python-libjuju/archive/py3.10.zip
+    ; juju
     git+https://github.com/juju/python-libjuju.git
     pytest
+;    git+https://github.com/marceloneppel/pytest-operator.git@juju-py3.10
     pytest-operator
     psycopg2-binary
     -r{toxinidir}/requirements.txt
