DPE-212 Add build of OCI image for integration tests

--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,7 @@ description = Run integration tests
 deps =
     git+https://github.com/juju/python-libjuju.git
     pytest
-    git+https://github.com/charmed-kubernetes/pytest-operator.git
+    pytest-operator
     psycopg2-binary
     -r{toxinidir}/requirements.txt
 commands =
