--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,8 +26,37 @@ jobs:
         run: python -m pip install tox
       - name: Run tests
         run: tox -e unit
+  # This job is needed until the OCI image is published to ROCKS.
+  build-oci-image:
+    name: Build OCI image for integration tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          repository: 'canonical/postgresql-patroni-container'
+          ref: 'v0.1.0'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build Image and Export
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          # Do not publish the image.
+          push: false
+          # Set the tag to retrieve the image in Deploy tests.
+          tags: postgresql-patroni
+          outputs: type=docker,dest=/tmp/image.tar
+      - name: Upload image to be used in integration tests
+        uses: actions/upload-artifact@v2
+        with:
+          name: image
+          path: /tmp/image.tar
   integration-test-microk8s:
     name: Integration tests (microk8s)
+    needs: build-oci-image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -36,5 +65,14 @@ jobs:
         uses: charmed-kubernetes/actions-operator@main
         with:
           provider: microk8s
+      # These two steps (download and load image) are needed until the OCI image is published to ROCKS.
+      - name: Download image built in build oci image step
+        uses: actions/download-artifact@v2
+        with:
+          name: image
+          path: /tmp
+      - name: Load Image into microk8s
+        run: |
+          /usr/bin/sg microk8s -c "microk8s ctr image import /tmp/image.tar"
       - name: Run integration tests
         run: tox -e integration
