Add initial TLS configuration

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -20,6 +20,12 @@ resources:
     type: oci-image
     description: OCI image for PostgreSQL (postgresql-patroni:local)
     upstream-source: postgresql-patroni:local
+  key-file:
+    type: file
+    filename: server.key
+  ca-cert-file:
+    type: file
+    filename: ca.crt
 
 peers:
   postgresql-replicas:
