--- a/tox.ini
+++ b/tox.ini
@@ -56,6 +56,7 @@ commands =
 [testenv:unit]
 description = Run unit tests
 deps =
+    psycopg2-binary
     pytest
     coverage[toml]
     -r{toxinidir}/requirements.txt
