--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,6 +64,7 @@ jobs:
       - name: Setup operator environment
         uses: charmed-kubernetes/actions-operator@main
         with:
+          bootstrap-options: --agent-version 2.9.29 # patch until https://bugs.launchpad.net/juju/+bug/1977582 is resolved
           provider: microk8s
       # These two steps (download and load image) are needed until the OCI image is published to ROCKS.
       - name: Download image built in build oci image step
