Remove version test

--- a/tox.ini
+++ b/tox.ini
@@ -67,7 +67,7 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
-    git+https://github.com/juju/python-libjuju.git@2.9.9
+    git+https://github.com/juju/python-libjuju.git
     pytest
     pytest-operator==0.20.0
     psycopg2-binary
