--- a/tox.ini
+++ b/tox.ini
@@ -67,9 +67,9 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
-    git+https://github.com/juju/python-libjuju.git
+    git+https://github.com/juju/python-libjuju.git@2.9.9
     pytest
-    pytest-operator==0.20.0
+    pytest-operator
     psycopg2-binary
     -r{toxinidir}/requirements.txt
 commands =
