--- a/metadata.yaml
+++ b/metadata.yaml
@@ -18,12 +18,18 @@ containers:
 resources:
   postgresql-image:
     type: oci-image
-    description: OCI image for PostgreSQL (ubuntu/postgres)
+    description: OCI image for PostgreSQL (postgresql-patroni)
     upstream-source: postgresql-patroni
 
 peers:
   postgresql-replicas:
     interface: postgresql-replicas
+
+provides:
+  db:
+    interface: pgsql
+  db-admin:
+    interface: pgsql
 
 storage:
   pgdata:
