--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 'canonical/postgresql-patroni-container'
-          ref: '2.1.4'
+          ref: 'v0.1.0'
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Build Image and Export
@@ -66,7 +66,7 @@ jobs:
         with:
           provider: microk8s
           # This is needed until https://bugs.launchpad.net/juju/+bug/1977582 is fixed.
-          # bootstrap-options: "--agent-version 2.9.29"
+           bootstrap-options: "--agent-version 2.9.29"
       # These two steps (download and load image) are needed until the OCI image is published to ROCKS.
       - name: Download image built in build oci image step
         uses: actions/download-artifact@v2
@@ -78,5 +78,3 @@ jobs:
           /usr/bin/sg microk8s -c "microk8s ctr image import /tmp/image.tar"
       - name: Run integration tests
         run: tox -e integration -- --keep-models tests/integration/test_db_with_tls.py
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
