--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,6 +77,4 @@ jobs:
         run: |
           /usr/bin/sg microk8s -c "microk8s ctr image import /tmp/image.tar"
       - name: Run integration tests
-        run: tox -e integration -- --keep-models tests/integration/test_db_with_tls.py
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
+        run: tox -e integration
