Implement new relation (#12)
* Add postgresql helpers library

* Add initial integration test for old db relation

* Add initial placeholders for old db relation events

* Add code to handle relation changed event

* Add connection string to databag

* Add data to both unit and application databag

* Fix endpoint string build

* Add initial TLS configuration

* Organize exchange of data

* Remove logs

* Fix db-admin permissions

* Add TLS files import

* Add comments

* Update mattermost test

* Implement new relation

* Fix resources on test

* Initial test for discourse

* Lint

* Add Finos Waltz to test

* Add another Discourse test

* Move relation code to another file

* Separate test files

* Organize config update

* Revert image name

* Add 3 units on tests

* Fix leader/primary logic

* Rename tests and increase timeout

* Add check for extensions request

* Add event for dropping user and improve tests

* Add custom services for primary and replicas

* Add more database units on test

* Update ops and database name retrieval

* Comment tests

* Add specific microk8s and Juju agent versions

* add version retrieval

* Improve code

* Fix unit tests

* Adjust tox and library id

* Delete generated files

* Add copyright notice and class description

* Add exception handling

* Adjustments on tests

* Fix helper function calls

* Update src/relations/db.py

Co-authored-by: Will Fitch <WRFitch@outlook.com>

* Fixes based on PR review

* Improve code structure

* Add workaround for Juju bug

* Fix cluster name and uncomment tests

* Rollback lib version

* Comment pod ip

* Use lighkube instead of microk8s kubectl

* Fix cluster name on tests

* Fix cluster name

* Update provides library

* Update requires library

* Add test for read-only endpoint

* Rename PostgreSQL client to PostgreSQL provider

* Add database port constant

* Add update l

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,8 @@ peers:
     interface: postgresql-replicas
 
 provides:
+  database:
+    interface: postgresql-client
   db:
     interface: pgsql
   db-admin:
