Change default asyncio mode to fix error on fixtures

--- a/tox.ini
+++ b/tox.ini
@@ -74,4 +74,4 @@ deps =
     psycopg2-binary
     -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 --asyncio-mode=auto
