--- a/tests/integration/new_relations/application-charm/metadata.yaml
+++ b/tests/integration/new_relations/application-charm/metadata.yaml
@@ -9,11 +9,11 @@ summary: |
 
 requires:
   first-database:
-    interface: postgresql-client
+    interface: postgresql_client
   second-database:
-    interface: postgresql-client
+    interface: postgresql_client
   multiple-database-clusters:
-    interface: postgresql-client
+    interface: postgresql_client
   aliased-multiple-database-clusters:
-    interface: postgresql-client
+    interface: postgresql_client
     limit: 2
