Change charm database user

--- a/actions.yaml
+++ b/actions.yaml
@@ -3,5 +3,6 @@
 
 get-primary:
   description: Get the unit with is the primary/leader in the replication.
-get-postgres-password:
-  description: Get the initial postgres user password for the database.
+get-operator-password:
+  description: Get the operator user password used by charm.
+    It is internal charm user, SHOULD NOT be used by applications.
