--- a/actions.yaml
+++ b/actions.yaml
@@ -3,16 +3,19 @@
 
 get-primary:
   description: Get the unit with is the primary/leader in the replication.
-get-operator-password:
-  description: Get the operator user password used by charm.
-    It is internal charm user, SHOULD NOT be used by applications.
-rotate-users-passwords:
-  description: Change the operator user password used by charm.
-    It is internal charm user, SHOULD NOT be used by applications.
+get-password:
+  description: Change the system user's password, which is used by charm.
+    It is for internal charm users and SHOULD NOT be used by applications.
   params:
-    user:
+    username:
       type: string
-      description: The password will be auto-generated if this option is not specified.
-    password:
+      description: The username, the default value 'operator'.
+        Possible values - operator, replication.
+set-password:
+  description: Change the system user's password, which is used by charm.
+    It is for internal charm users and SHOULD NOT be used by applications.
+  params:
+    username:
       type: string
-      description: The password will be auto-generated if this option is not specified.
+      description: The username, the default value 'operator'.
+        Possible values - operator, replication.
