Add separate encironments for different tests

--- a/tox.ini
+++ b/tox.ini
@@ -65,8 +65,8 @@ commands =
         -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
     coverage report
 
-[testenv:integration]
-description = Run integration tests
+[testenv:charm-integration]
+description = Run charm integration tests
 deps =
     juju
     pytest
@@ -74,4 +74,59 @@ deps =
     psycopg2-binary
     -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 --asyncio-mode=auto
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m charm
+
+[testenv:database-relation-integration]
+description = Run database relation integration tests
+deps =
+    juju
+    pytest
+    pytest-operator
+    psycopg2-binary
+    -r{toxinidir}/requirements.txt
+commands =
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m database_relation
+
+[testenv:db-relation-integration]
+description = Run db relation integration tests
+deps =
+    juju
+    pytest
+    pytest-operator
+    psycopg2-binary
+    -r{toxinidir}/requirements.txt
+commands =
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m db_relation
+
+[testenv:db-admin-relation-integration]
+description = Run db-admin relation integration tests
+deps =
+    juju
+    pytest
+    pytest-operator
+    psycopg2-binary
+    -r{toxinidir}/requirements.txt
+commands =
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m db_admin_relation
+
+[testenv:password-rotation-integration]
+description = Run password rotation integration tests
+deps =
+    juju
+    pytest
+    pytest-operator
+    psycopg2-binary
+    -r{toxinidir}/requirements.txt
+commands =
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m password_rotation
+
+[testenv:integration]
+description = Run all integration tests
+deps =
+    juju
+    pytest
+    pytest-operator
+    psycopg2-binary
+    -r{toxinidir}/requirements.txt
+commands =
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0
