--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -102,6 +102,21 @@ jobs:
       - name: Run integration tests
         run: tox -e db-admin-relation-integration
 
+  integration-test-ha:
+    name: Integration tests for high availability
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup operator environment
+        uses: charmed-kubernetes/actions-operator@main
+        with:
+          provider: microk8s
+          # This is needed until https://bugs.launchpad.net/juju/+bug/1977582 is fixed.
+          bootstrap-options: "--agent-version 2.9.29"
+      - name: Run integration tests
+        run: tox -e ha-integration
+
   integration-test-password-rotation:
     name: Integration tests for password rotation
     runs-on: ubuntu-latest
@@ -127,6 +142,7 @@ jobs:
       - integration-test-database-relation
       - integration-test-db-relation
       - integration-test-db-admin-relation
+      - integration-test-ha
       - integration-test-password-rotation
     runs-on: ubuntu-latest
     steps:
