--- a/tox.ini
+++ b/tox.ini
@@ -109,6 +109,17 @@ deps =
 commands =
     pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m db_admin_relation
 
+[testenv:ha-integration]
+description = Run high availability integration tests
+deps =
+    juju
+    pytest
+    pytest-operator
+    psycopg2-binary
+    -r{toxinidir}/requirements.txt
+commands =
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m ha
+
 [testenv:password-rotation-integration]
 description = Run password rotation integration tests
 deps =
