--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,13 @@ show_missing = true
 minversion = "6.0"
 log_cli_level = "INFO"
 asyncio_mode = "auto"
+markers = [
+    "charm_tests",
+    "database_relation_tests",
+    "db_relation_tests ",
+    "db_admin_relation_tests",
+    "password_rotation_tests",
+]
 
 # Formatting tools configuration
 [tool.black]
