Add password parameter to the action

--- a/actions.yaml
+++ b/actions.yaml
@@ -19,3 +19,6 @@ set-password:
       type: string
       description: The username, the default value 'operator'.
         Possible values - operator, replication.
+    password:
+      type: string
+      description: The password will be auto-generated if this option is not specified.
