--- a/actions.yaml
+++ b/actions.yaml
@@ -6,3 +6,12 @@ get-primary:
 get-operator-password:
   description: Get the operator user password used by charm.
     It is internal charm user, SHOULD NOT be used by applications.
+set-tls-private-key:
+  description: Set the privates key, which will be used for certificate signing requests (CSR). Run for each unit separately.
+  params:
+    external-key:
+      type: string
+      description: The content of private key for external communications with clients. Content will be auto-generated if this option is not specified.
+    internal-key:
+      type: string
+      description: The content of private key for internal communications with clients. Content will be auto-generated if this option is not specified.
