--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -8,5 +8,10 @@ bases:
       channel: "20.04"
 parts:
   charm:
+    build-packages:
+      - libffi-dev
+      - libssl-dev
+      - rustc
+      - cargo
     charm-binary-python-packages: [psycopg2-binary==2.9.3]
     charm-python-packages: [setuptools]
