--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,11 @@ provides:
   db-admin:
     interface: pgsql
 
+requires:
+  certificates:
+    interface: tls-certificates
+    limit: 1
+
 storage:
   pgdata:
     type: filesystem
