Add pytest markers, tox environment and CI jobs

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -117,6 +117,21 @@ jobs:
       - name: Run integration tests
         run: tox -e password-rotation-integration
 
+  integration-test-tls:
+    name: Integration tests for TLS
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup operator environment
+        uses: charmed-kubernetes/actions-operator@main
+        with:
+          provider: microk8s
+          # This is needed until https://bugs.launchpad.net/juju/+bug/1977582 is fixed.
+          bootstrap-options: "--agent-version 2.9.29"
+      - name: Run integration tests
+        run: tox -e tls-integration
+
   release-to-charmhub:
     name: Release to CharmHub
     needs:
@@ -128,6 +143,7 @@ jobs:
       - integration-test-db-relation
       - integration-test-db-admin-relation
       - integration-test-password-rotation
+      - integration-test-tls
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
