--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ markers = [
     "db_relation_tests",
     "db_admin_relation_tests",
     "password_rotation_tests",
+    "tls_tests",
 ]
 
 # Formatting tools configuration
