Fix pytest markers

--- a/tox.ini
+++ b/tox.ini
@@ -118,7 +118,7 @@ deps =
     psycopg2-binary
     -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m ha
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m ha_tests
 
 [testenv:password-rotation-integration]
 description = Run password rotation integration tests
