--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ markers = [
     "database_relation_tests",
     "db_relation_tests",
     "db_admin_relation_tests",
+    "ha_tests",
     "password_rotation_tests",
 ]
 
