--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,8 @@ resources:
 peers:
   database-peers:
     interface: postgresql_peers
+  restart:
+    interface: rolling_op
 
 provides:
   database:
