--- a/actions.yaml
+++ b/actions.yaml
@@ -22,3 +22,9 @@ set-password:
     password:
       type: string
       description: The password will be auto-generated if this option is not specified.
+set-tls-private-key:
+  description: Set the private key, which will be used for certificate signing requests (CSR). Run for each unit separately.
+  params:
+    private-key:
+      type: string
+      description: The content of private key for communications with clients. Content will be auto-generated if this option is not specified.
