--- a/tox.ini
+++ b/tox.ini
@@ -113,6 +113,7 @@ commands =
 description = Run high availability self healing integration tests
 deps =
     juju
+    kubernetes
     pytest
     pytest-operator
     psycopg2-binary
