--- a/actions.yaml
+++ b/actions.yaml
@@ -10,7 +10,7 @@ get-password:
     username:
       type: string
       description: The username, the default value 'operator'.
-        Possible values - operator, replication.
+        Possible values - operator, backup, replication.
 set-password:
   description: Change the system user's password, which is used by charm.
     It is for internal charm users and SHOULD NOT be used by applications.
@@ -18,7 +18,7 @@ set-password:
     username:
       type: string
       description: The username, the default value 'operator'.
-        Possible values - operator, replication.
+        Possible values - operator, backup, replication.
     password:
       type: string
       description: The password will be auto-generated if this option is not specified.
