--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,6 +44,10 @@ jobs:
 
   integration-test-charm:
     name: Integration tests for charm deployment
+    needs:
+      - lib-check
+      - lint
+      - unit-test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -59,6 +63,10 @@ jobs:
 
   integration-test-database-relation:
     name: Integration tests for database relation
+    needs:
+      - lib-check
+      - lint
+      - unit-test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -74,6 +82,10 @@ jobs:
 
   integration-test-db-relation:
     name: Integration tests for db relation
+    needs:
+      - lib-check
+      - lint
+      - unit-test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -89,6 +101,10 @@ jobs:
 
   integration-test-db-admin-relation:
     name: Integration tests for db-admin relation
+    needs:
+      - lib-check
+      - lint
+      - unit-test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -104,6 +120,10 @@ jobs:
 
   integration-test-password-rotation:
     name: Integration tests for password rotation
+    needs:
+      - lib-check
+      - lint
+      - unit-test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -119,6 +139,10 @@ jobs:
 
   integration-test-tls:
     name: Integration tests for TLS
+    needs:
+      - lib-check
+      - lint
+      - unit-test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
