Pin juju version

--- a/tox.ini
+++ b/tox.ini
@@ -68,7 +68,7 @@ commands =
 [testenv:charm-integration]
 description = Run charm integration tests
 deps =
-    juju
+    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
     pytest
     pytest-operator
     psycopg2-binary
@@ -79,7 +79,7 @@ commands =
 [testenv:database-relation-integration]
 description = Run database relation integration tests
 deps =
-    juju
+    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
     pytest
     pytest-operator
     psycopg2-binary
@@ -90,7 +90,7 @@ commands =
 [testenv:db-relation-integration]
 description = Run db relation integration tests
 deps =
-    juju
+    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
     pytest
     pytest-operator
     psycopg2-binary
@@ -101,7 +101,7 @@ commands =
 [testenv:db-admin-relation-integration]
 description = Run db-admin relation integration tests
 deps =
-    juju
+    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
     pytest
     pytest-operator
     psycopg2-binary
@@ -112,7 +112,7 @@ commands =
 [testenv:password-rotation-integration]
 description = Run password rotation integration tests
 deps =
-    juju
+    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
     pytest
     pytest-operator
     psycopg2-binary
@@ -123,7 +123,7 @@ commands =
 [testenv:tls-integration]
 description = Run TLS integration tests
 deps =
-    juju
+    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
     pytest
     pytest-operator
     psycopg2-binary
@@ -134,7 +134,7 @@ commands =
 [testenv:integration]
 description = Run all integration tests
 deps =
-    juju
+    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
     pytest
     pytest-operator
     psycopg2-binary
