--- a/tox.ini
+++ b/tox.ini
@@ -112,7 +112,7 @@ commands =
 [testenv:ha-self-healing-integration]
 description = Run high availability self healing integration tests
 deps =
-    juju
+    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
     kubernetes
     pytest
     pytest-operator
