--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -13,5 +13,4 @@ parts:
       - libssl-dev
       - rustc
       - cargo
-    charm-binary-python-packages: [psycopg2-binary==2.9.3]
-    charm-python-packages: [setuptools]
+    charm-binary-python-packages: [psycopg2-binary==2.9.3, setuptools]
