--- a/.github/workflows/issues_to_jira.yaml
+++ b/.github/workflows/issues_to_jira.yaml
@@ -15,22 +15,32 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Create JIRA ticket
+        env:
+           # put into env vars to properly escape special bash chars
+           ISSUE_TITLE: ${{ github.event.issue.title }}
+           ISSUE_DESCRIPTION: ${{ github.event.issue.body }}
         run: |
           # Determine Bug/Enhancement
           if ${{ contains(github.event.*.labels.*.name, 'Bug') }}; then
-            type=bug
+            ISSUE_TYPE=bug
           else
-            type=story
+            ISSUE_TYPE=story
           fi
 
           # send JIRA request
+
+          # Canonical doesn't encourage discussions in JIRA on public project issues.
+          # Thus, it is NOT recommended to put description in JIRA in order to push conversation to GitHub
+          # if strongly required, then replace '--arg body ""' with the next line
+          # --arg body "$ISSUE_DESCRIPTION"
+
           data=$( jq -n \
-                  --arg title "${{github.event.issue.title }}" \
-                  --arg url "${{ github.event.issue.html_url }}" \
-                  --arg submitter "${{ github.event.issue.user.login }}" \
-                  --arg body "${{ github.event.issue.body }}" \
-                  --arg type "$type" \
-                  --arg action ${{ github.event.action }} \
+                  --arg title "$ISSUE_TITLE" \
+                  --arg url '${{ github.event.issue.html_url }}' \
+                  --arg submitter '${{ github.event.issue.user.login }}' \
+                  --arg body "" \
+                  --arg type "$ISSUE_TYPE" \
+                  --arg action '${{ github.event.action }}' \
                   '{title: $title, url: $url, submitter: $submitter, body: $body, type: $type, action: $action}' )
 
           curl -X POST -H 'Content-type: application/json' --data "${data}" "${{ secrets.JIRA_URL }}"
