Wrong extensions databag

--- a/tox.ini
+++ b/tox.ini
@@ -58,6 +58,7 @@ description = Run unit tests
 deps =
     psycopg2-binary
     pytest
+    pytest-asyncio
     coverage[toml]
     -r{toxinidir}/requirements.txt
 commands =
