Add integration test for the fix

--- a/tests/integration/new_relations/application-charm/metadata.yaml
+++ b/tests/integration/new_relations/application-charm/metadata.yaml
@@ -17,3 +17,5 @@ requires:
   aliased-multiple-database-clusters:
     interface: postgresql_client
     limit: 2
+  no-database:
+    interface: postgresql_client
