--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ jinja2==3.0.3
 jsonschema==4.14.0
 lightkube==0.10.0
 lightkube-models==1.26.0.4
-ops==1.5.0
+ops==2.0.0rc2
 requests==2.27.1
 tenacity==8.0.1
