Update Juju python library

--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,7 @@ commands =
 [testenv:charm-integration]
 description = Run charm integration tests
 deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
+    juju~=2.9.0 # Latest juju 2
     pytest
     pytest-operator
     psycopg2-binary
@@ -80,7 +80,7 @@ commands =
 [testenv:database-relation-integration]
 description = Run database relation integration tests
 deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
+    juju~=2.9.0 # Latest juju 2
     pytest
     pytest-operator
     psycopg2-binary
@@ -91,7 +91,7 @@ commands =
 [testenv:db-relation-integration]
 description = Run db relation integration tests
 deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
+    juju~=2.9.0 # Latest juju 2
     pytest
     pytest-operator
     psycopg2-binary
@@ -102,7 +102,7 @@ commands =
 [testenv:db-admin-relation-integration]
 description = Run db-admin relation integration tests
 deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
+    juju~=2.9.0 # Latest juju 2
     pytest
     pytest-operator
     psycopg2-binary
@@ -113,7 +113,7 @@ commands =
 [testenv:ha-self-healing-integration]
 description = Run high availability self healing integration tests
 deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
+    juju~=2.9.0 # Latest juju 2
     kubernetes
     pytest
     pytest-operator
@@ -125,7 +125,7 @@ commands =
 [testenv:password-rotation-integration]
 description = Run password rotation integration tests
 deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
+    juju~=2.9.0 # Latest juju 2
     pytest
     pytest-operator
     psycopg2-binary
@@ -136,7 +136,7 @@ commands =
 [testenv:tls-integration]
 description = Run TLS integration tests
 deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
+    juju~=2.9.0 # Latest juju 2
     pytest
     pytest-operator
     psycopg2-binary
@@ -147,7 +147,7 @@ commands =
 [testenv:integration]
 description = Run all integration tests
 deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
+    juju~=2.9.0 # Latest juju 2
     pytest
     pytest-operator
     psycopg2-binary
