--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,7 @@ commands =
 description = Run unit tests
 commands =
     poetry install --with unit
+    poetry lock
     poetry export -f requirements.txt -o requirements.txt
     poetry run coverage run --source={[vars]src_path} \
         -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
@@ -58,6 +59,7 @@ commands =
 description = Run charm integration tests
 commands =
     poetry install --with integration
+    poetry lock
     poetry export -f requirements.txt -o requirements.txt
     poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m charm_tests
 
@@ -65,6 +67,7 @@ commands =
 description = Run database relation integration tests
 commands =
     poetry install --with integration
+    poetry lock
     poetry export -f requirements.txt -o requirements.txt
     poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m database_relation_tests
 
@@ -72,6 +75,7 @@ commands =
 description = Run db relation integration tests
 commands =
     poetry install --with integration
+    poetry lock
     poetry export -f requirements.txt -o requirements.txt
     poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m db_relation_tests
 
@@ -86,6 +90,7 @@ commands =
 description = Run high availability self healing integration tests
 commands =
     poetry install --with integration
+    poetry lock
     poetry export -f requirements.txt -o requirements.txt
     poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m ha_self_healing_tests
 
@@ -93,6 +98,7 @@ commands =
 description = Run password rotation integration tests
 commands =
     poetry install --with integration
+    poetry lock
     poetry export -f requirements.txt -o requirements.txt
     poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m password_rotation_tests
 
@@ -100,6 +106,7 @@ commands =
 description = Run TLS integration tests
 commands =
     poetry install --with integration
+    poetry lock
     poetry export -f requirements.txt -o requirements.txt
     poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m tls_tests
 
@@ -107,5 +114,13 @@ commands =
 description = Run all integration tests
 commands =
     poetry install --with integration
+    poetry lock
     poetry export -f requirements.txt -o requirements.txt
     poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0
+
+[testenv:poetry-lock]
+description = Install, lock and export poetry dependencies
+commands =
+    poetry install --with integration
+    poetry lock
+    poetry export -f requirements.txt -o requirements.txt
