Initial code for backups

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ minversion = "6.0"
 log_cli_level = "INFO"
 asyncio_mode = "auto"
 markers = [
+    "backup_tests",
     "charm_tests",
     "database_relation_tests",
     "db_relation_tests",
