--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,6 +39,8 @@ requires:
   certificates:
     interface: tls-certificates
     limit: 1
+  s3-parameters:
+    interface: s3
 
 storage:
   pgdata:
