Change tox env to use caching

--- a/tox.ini
+++ b/tox.ini
@@ -56,15 +56,18 @@ commands =
 
 [testenv:backup-integration]
 description = Run backup integration tests
-passenv =
+pass_env =
+    {[testenv]pass_env}
     AWS_ACCESS_KEY
     AWS_SECRET_KEY
     GCP_ACCESS_KEY
     GCP_SECRET_KEY
+    CI
+    CI_PACKED_CHARMS
 commands =
     poetry install --with integration
     poetry export -f requirements.txt -o requirements.txt
-    poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m backup_tests
+    poetry run pytest -v --tb native --log-cli-level=INFO -s  --durations=0 {posargs} {[vars]tests_path}/integration/test_backups.py
 
 [testenv:charm-integration]
 description = Run charm integration tests
