pgBackRest backup action (#93)
* Initial code for backups

* Add more check on test

* Remove restore code

* Use default pgBackRest config file

* Add backup user

* Change stanza name

* Organize code

* Revert resources

* Remove log call

* Reduce log level

* Add assertion to test

* Add backups CI job

* Fix backups retention

* Fix tox backup environment

* Add check for missing required parameters

* Add limit to S3 relation

Co-authored-by: Mykola Marzhan <303592+delgod@users.noreply.github.com>

* Delete backups after test

* Consider s3-uri-style to make integration with Minio work

* Fix existing test

* Change tox env to use caching

* Add variables back to the CI workflow

---------

Co-authored-by: Mykola Marzhan <303592+delgod@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -54,6 +54,21 @@ commands =
         -m pytest -v --tb native -s {posargs} {[vars]tests_path}/unit
     poetry run coverage report
 
+[testenv:backup-integration]
+description = Run backup integration tests
+pass_env =
+    {[testenv]pass_env}
+    AWS_ACCESS_KEY
+    AWS_SECRET_KEY
+    GCP_ACCESS_KEY
+    GCP_SECRET_KEY
+    CI
+    CI_PACKED_CHARMS
+commands =
+    poetry install --with integration
+    poetry export -f requirements.txt -o requirements.txt
+    poetry run pytest -v --tb native --log-cli-level=INFO -s  --durations=0 {posargs} {[vars]tests_path}/integration/test_backups.py
+
 [testenv:charm-integration]
 description = Run charm integration tests
 pass_env =
