All dep groups set to optional

--- a/tox.ini
+++ b/tox.ini
@@ -29,14 +29,14 @@ deps =
 [testenv:format]
 description = Apply coding style standards to code
 commands =
-    poetry install --only fmt
+    poetry install --only format
     poetry run isort {[vars]all_path}
     poetry run black {[vars]all_path}
 
 [testenv:lint]
 description = Check code against coding style standards
 commands =
-    poetry install --only fmt,lint
+    poetry install --only format,lint
     poetry run codespell {tox_root}/*.yaml {tox_root}/*.ini {tox_root}/*.md \
       {tox_root}/*.toml {tox_root}/*.txt {tox_root}/.github
     # pflake8 wrapper supports config from pyproject.toml
