--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,18 @@ jinja2 = "^3.1.2"
 lightkube = "^0.12.0"
 lightkube-models = "^1.26.0.4"
 requests = "^2.28.2"
-boto3 = "^1.26.84"
+boto3 = "^1.26.85"
 # psycopg2 = "^2.9.5" # Injected in charmcraft.yaml
 
-[tool.poetry.group.fmt.dependencies]
+[tool.poetry.group.format]
+optional = true
+
+[tool.poetry.group.format.dependencies]
 black = "^22.12.0"
 isort = "^5.11.4"
+
+[tool.poetry.group.lint]
+optional = true
 
 [tool.poetry.group.lint.dependencies]
 flake8 = "^6.0.0"
@@ -38,10 +44,16 @@ pyproject-flake8 = "^6.0.0.post1"
 pep8-naming = "^0.13.3"
 codespell = "^2.2.2"
 
+[tool.poetry.group.unit]
+optional = true
+
 [tool.poetry.group.unit.dependencies]
 coverage = {extras = ["toml"], version = "^7.0.5"}
 pytest = "^7.2.2"
 pytest-asyncio = "^0.20.3"
+
+[tool.poetry.group.integration]
+optional = true
 
 [tool.poetry.group.integration.dependencies]
 lightkube = "^0.12.0"
