--- a/tests/integration/ha_tests/application-charm/charmcraft.yaml
+++ b/tests/integration/ha_tests/application-charm/charmcraft.yaml
@@ -11,4 +11,5 @@ bases:
         channel: "22.04"
 parts:
   charm:
-    charm-binary-python-packages: [psycopg2-binary==2.9.5]
+    charm-binary-python-packages:
+      - psycopg2-binary==2.9.5  # renovate
