--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -13,4 +13,5 @@ parts:
       - libssl-dev
       - rustc
       - cargo
-    charm-binary-python-packages: [psycopg2-binary==2.9.5]
+    charm-binary-python-packages:
+      - psycopg2-binary==2.9.5  # renovate
