Fix freeze db test

--- a/tests/integration/ha_tests/application-charm/metadata.yaml
+++ b/tests/integration/ha_tests/application-charm/metadata.yaml
@@ -11,3 +11,7 @@ requires:
   database:
     interface: postgresql_client
     limit: 1
+
+peers:
+  application-peers:
+    interface: application-peers
