--- a/tox.ini
+++ b/tox.ini
@@ -112,6 +112,16 @@ commands =
     poetry install --with integration
     poetry run pytest -v --tb native --log-cli-level=INFO -s  --durations=0 {posargs} {[vars]tests_path}/integration/test_db_admin.py
 
+[testenv:ha-replication-integration]
+description = Run high availability replication integration tests
+pass_env =
+    {[testenv]pass_env}
+    CI
+    CI_PACKED_CHARMS
+commands =
+    poetry install --with integration
+    poetry run pytest -v --tb native --log-cli-level=INFO -s  --durations=0 {posargs} {[vars]tests_path}/integration/ha_tests/test_replication.py
+
 [testenv:ha-self-healing-integration]
 description = Run high availability self healing integration tests
 pass_env =
